fix(synchronization): add inherited types to dhis2 sync config (refs #878)